--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "tests"
   ],
   "dependencies": {
-    "normalize-css": "~5.0.0"
+    "normalize-css": "~5.0.0",
+    "handlebars": "~4.0.5"
   }
 }
